# 2024_Lab_3_Aidan_Kirra

src/: CMakeLists.txt  fifo.c  signaling.c
test/: CMakeLists.txt  test_fifo.c  test_signal.c
